; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23115.c_getcode.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23115.c_getcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [36 x i8] c"getcode(): allocating memory failed\00", align 1
@x86_exec = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getcode() #0 {
  %1 = alloca i8*, align 8
  %2 = call i64 @malloc(i32 1001)
  %3 = inttoptr i64 %2 to i8*
  store i8* %3, i8** %1, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = call i32 @printe(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 1)
  br label %7

7:                                                ; preds = %5, %0
  %8 = load i8*, i8** %1, align 8
  %9 = load i32, i32* @x86_exec, align 4
  %10 = call i32 @strlen(i32 %9)
  %11 = sub nsw i32 1000, %10
  %12 = call i32 @memset(i8* %8, i32 144, i32 %11)
  %13 = load i8*, i8** %1, align 8
  %14 = load i32, i32* @x86_exec, align 4
  %15 = call i32 @strlen(i32 %14)
  %16 = sub nsw i32 1000, %15
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8, i8* %13, i64 %17
  %19 = load i32, i32* @x86_exec, align 4
  %20 = load i32, i32* @x86_exec, align 4
  %21 = call i32 @strlen(i32 %20)
  %22 = call i32 @memcpy(i8* %18, i32 %19, i32 %21)
  %23 = load i8*, i8** %1, align 8
  ret i8* %23
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @printe(i8*, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
